# neuronet

./: .gitignore  CMakeLists.txt  README.md  main  todo
include/neuronet/: neural_connection.hpp  neural_layer.hpp  neural_net.hpp  neuron.hpp
include/nn/: neural_connection.hpp  neural_layer.hpp  neural_net.hpp  neuron.hpp
include/utility/: print_vector.hpp  reverse_adapter.hpp  training_data.hpp  zip_range.hpp
src/: CMakeLists.txt  main.cpp  neural_connection.cpp  neural_layer.cpp  neural_net.cpp  neuron.cpp
src/neuronet/: neural_connection.cpp  neural_layer.cpp  neural_net.cpp  neuron.cpp
src/utility/: training_data.cpp
test/: serialize_01.data  test_01.data  test_02.data  test_03.data  test_04.data
zz_old/: tutorial.cpp
